# waypointmanager

./: #CMakeLists.txt#  .gitignore  CMakeLists.txt  Makefile  README.md  codecheck.sh  compile_commands.json  main
Inc/: #manager.hpp#  graphbases.hpp  manager.hpp  math.hpp
Src/: main.cpp  manager.cpp
